--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
-        "start": "node dist/server.js",
-        "dev": "nodemon",
-        "lint": "eslint 'src/**/*.ts'"
+        "lint": "eslint 'src/**/*.ts'",
+        "build": "tsc && tsc-alias",
+        "start": "cross-env NODE_ENV=production node dist/server.js",
+        "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts"
     },
     "keywords": [],
     "author": "",
@@ -29,11 +29,14 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/node": "^24.6.2",
+        "cross-env": "^10.1.0",
         "eslint": "^9.37.0",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "tsc-alias": "^1.8.16",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.9.3"
     }
 }
