--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
-	"compilerOptions": {
-		"target": "ES2021",
-		"module": "commonjs",
-		"rootDir": "src",
-		"outDir": "dist",
-		"baseUrl": "src",
-		"paths": {
-			"@/*": ["*"]
-		},
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"strict": true,
-		"skipLibCheck": true,
-		"ignoreDeprecations": "6.0"
-	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+    "compilerOptions": {
+        "target": "ES2021",
+        "module": "commonjs",
+        "rootDir": "src",
+        "outDir": "dist",
+        "baseUrl": "src",
+        "paths": {
+            "@/*": ["*"]
+        },
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
