--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/cookie-parser": "^1.4.9",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.6.2",
         "cross-env": "^10.1.0",
         "eslint": "^9.37.0",
