--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.20.0",
-        "mongoose": "^8.19.0"
+        "mongoose": "^8.19.0",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.9",
