--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "typeRoots": ["./src/types", "./node_modules/@types"],
+        "types": ["node", "express"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
