--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
         "module": "commonjs",
         "rootDir": "src",
         "outDir": "dist",
-        "baseUrl": "src",
         "paths": {
-            "@/*": ["*"]
+            "@/*": ["./src/*"]
         },
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
