added logging system

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.20.0",
         "mongoose": "^8.19.0",
+        "morgan": "^1.10.1",
+        "winston": "^3.18.3",
         "zod": "^4.1.11"
     },
     "devDependencies": {
@@ -30,7 +32,9 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.10",
         "@types/node": "^24.6.2",
+        "@types/winston": "^2.4.4",
         "cross-env": "^10.1.0",
         "eslint": "^9.37.0",
         "nodemon": "^3.1.10",
