--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "license": "ISC",
     "type": "commonjs",
     "dependencies": {
+        "@arcjet/inspect": "^1.0.0-beta.12",
+        "@arcjet/node": "^1.0.0-beta.12",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
