--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
         "serve-favicon": "^2.5.1",
+        "socket.io": "^4.8.1",
         "winston": "^3.18.3",
         "zod": "^4.1.11"
     },
@@ -41,6 +42,7 @@
         "@types/multer": "^2.0.0",
         "@types/node": "^24.6.2",
         "@types/serve-favicon": "^2.5.7",
+        "@types/socket.io": "^3.0.1",
         "@types/winston": "^2.4.4",
         "cross-env": "^10.1.0",
         "eslint": "^9.37.0",
